<LANG>_CLANG_TIDY interferes with <LANG>_COMPILER_LAUNCHER
Is CMAKE_CXX_CLANG_TIDY
not compatible with CMAKE_CXX_COMPILER_LAUNCHER
?
I am using compiler launcher to execute ccache, however it is not invoking ccache correctly(see below)
Is this intended behavior? Is there a preferred way to launch a tool like ccache?
With the following variables set:
CMAKE_CXX_CLANG_TIDY=clang-tidy
CMAKE_CXX_COMPILER_LAUNCHER=ccache
running make VERBOSE=1
, I see commands similar to this:
`cd /..../cmn && ccache cmake -E __run_iwyu --tidy=clang-tidy --source=/.../cmn/file.cpp -- g++ ...`
I would expect the command to look similar to:
`cd /srcdir/..../cmn && cmake -E __run_iwyu --tidy=clang-tidy --source=/.../cmn/file.cpp -- ccache g++ ...`
This is using CMake 3.6.2
Thanks,
Nick